UF-386: Workbench Preferences Bean API (#515)